fixing stretched image bug on safari

--- a/styles.css
+++ b/styles.css
@@ -283,6 +283,7 @@ main {
 
 .project__wrapper {
     display: flex; /* used to get image to be full size of wrapper */
+    align-items: flex-start;
     box-shadow: 0px 20px  80px rgba(0, 0, 0, 0.45);
     border-radius: 20px;
     overflow: hidden;
